@@ -1,3 +1,8 @@
+2004-05-09(Sun) 18:11:30 +0900  Koichi Sasada  <ko1@atdot.net>
+
+	* ndk_manager.rb : correct command to clients
+
+
 2004-05-09(Sun) 17:27:46 +0900  Koichi Sasada  <ko1@atdot.net>
 
 	* ndk_manager.rb : change away nick lag time to 2 sec
